--- a/notes/coursera/week_02/03_computing_on_data/01.md
+++ b/notes/coursera/week_02/03_computing_on_data/01.md
@@ -2,7 +2,6 @@
 
 > How to do computations on data
 
-1. Load data into Octave
 
 ```MATLAB
 >>A = [1 2; 3 4; 5 6]
@@ -170,4 +169,375 @@ val =  15
 >>[val, ind] = max(a)
 val =  15
 ind =  2
+
+
+
+>>a
+a =
+
+    1.00000   15.00000    2.00000    0.50000
+
+>>a<3
+ans =
+
+  1  0  1  1
+
+>>find(a<3)
+ans =
+
+   1   3   4
+
+>>A = magic(3)
+A =
+
+   8   1   6
+   3   5   7
+   4   9   2
+
+>>help magic
+'magic' is a function from the file C:\Octave\Octave-5.1.0.0\mingw64\share\octave\5.1.0\m\special-matrix\magic.m
+
+ -- magic (N)
+
+     Create an N-by-N magic square.
+
+     A magic square is an arrangement of the integers '1:n^2' such that
+     the row sums, column sums, and diagonal sums are all equal to the
+     same value.
+
+     Note: N must be a scalar greater than or equal to 3.  If you supply
+     N less than 3, magic returns either a nonmagic square, or else the
+     degenerate magic squares 1 and [].
+
+Additional help for built-in functions and operators is
+available in the online version of the manual.  Use the command
+'doc <topic>' to search the manual index.
+
+Help and information about Octave is also available on the WWW
+at https://www.octave.org and via the help@octave.org
+mailing list.
+>>
+>>
+>>[r, c] = find(A>=7)
+r =
+
+   1
+   3
+   2
+
+c =
+
+   1
+   2
+   3
+
+>>[d] = find(A>=7)
+d =
+
+   1
+   6
+   8
+
+>>help find
+'find' is a built-in function from the file libinterp/corefcn/find.cc
+
+ -- IDX = find (X)
+ -- IDX = find (X, N)
+ -- IDX = find (X, N, DIRECTION)
+ -- [i, j] = find (...)
+ -- [i, j, v] = find (...)
+     Return a vector of indices of nonzero elements of a matrix, as a
+     row if X is a row vector or as a column otherwise.
+
+     To obtain a single index for each matrix element, Octave pretends
+     that the columns of a matrix form one long vector (like Fortran
+     arrays are stored).  For example:
+
+          find (eye (2))
+            => [ 1; 4 ]
+
+     If two inputs are given, N indicates the maximum number of elements
+     to find from the beginning of the matrix or vector.
+
+     If three inputs are given, DIRECTION should be one of "first" or
+     "last", requesting only the first or last N indices, respectively.
+     However, the indices are always returned in ascending order.
+
+     If two outputs are requested, 'find' returns the row and column
+     indices of nonzero elements of a matrix.  For example:
+
+          [i, j] = find (2 * eye (2))
+              => i = [ 1; 2 ]
+              => j = [ 1; 2 ]
+
+     If three outputs are requested, 'find' also returns a vector
+     containing the nonzero values.  For example:
+
+          [i, j, v] = find (3 * eye (2))
+                 => i = [ 1; 2 ]
+                 => j = [ 1; 2 ]
+                 => v = [ 3; 3 ]
+
+     Note that this function is particularly useful for sparse matrices,
+     as it extracts the nonzero elements as vectors, which can then be
+     used to create the original matrix.  For example:
+
+          sz = size (a);
+          [i, j, v] = find (a);
+          b = sparse (i, j, v, sz(1), sz(2));
+
+     See also: nonzeros.
+
+Additional help for built-in functions and operators is
+available in the online version of the manual.  Use the command
+'doc <topic>' to search the manual index.
+
+Help and information about Octave is also available on the WWW
+at https://www.octave.org and via the help@octave.org
+mailing list.
+>>
+>>
+>>
+>>
+>>
+>>
+>>a
+a =
+
+    1.00000   15.00000    2.00000    0.50000
+
+>>sum(a)
+ans =  18.500
+>>prod(a)
+ans =  15
+>>floor(a)
+ans =
+
+    1   15    2    0
+
+>>ceil(a)
+ans =
+
+    1   15    2    1
+
+>>rand(3)
+ans =
+
+   0.69138   0.32878   0.80592
+   0.78414   0.68358   0.40751
+   0.29958   0.39112   0.93421
+
+>>max(rand(3), rand(3))
+ans =
+
+   0.37433   0.98489   0.85150
+   0.62690   0.58514   0.94572
+   0.86343   0.89704   0.82636
+
+>>ceil(rand(3))
+ans =
+
+   1   1   1
+   1   1   1
+   1   1   1
+
+>>max([A,[],1)
+parse error:
+
+  syntax error
+
+>>> max([A,[],1)
+               ^
+
+>>max(A,[],1)
+ans =
+
+   8   9   7
+
+>>max(A)
+ans =
+
+   8   9   7
+
+>>max(A,[],2)
+ans =
+
+   8
+   7
+   9
+
+>>max(max(A))
+ans =  9
+>>A(:)
+ans =
+
+   8
+   3
+   4
+   1
+   5
+   9
+   6
+   7
+   2
+
+>>max(A(:))
+ans =  9
+>>a = magic(9)
+a =
+
+   47   58   69   80    1   12   23   34   45
+   57   68   79    9   11   22   33   44   46
+   67   78    8   10   21   32   43   54   56
+   77    7   18   20   31   42   53   55   66
+    6   17   19   30   41   52   63   65   76
+   16   27   29   40   51   62   64   75    5
+   26   28   39   50   61   72   74    4   15
+   36   38   49   60   71   73    3   14   25
+   37   48   59   70   81    2   13   24   35
+
+>>sum(A,1)
+ans =
+
+   15   15   15
+
+>>A = magic(9)
+A =
+
+   47   58   69   80    1   12   23   34   45
+   57   68   79    9   11   22   33   44   46
+   67   78    8   10   21   32   43   54   56
+   77    7   18   20   31   42   53   55   66
+    6   17   19   30   41   52   63   65   76
+   16   27   29   40   51   62   64   75    5
+   26   28   39   50   61   72   74    4   15
+   36   38   49   60   71   73    3   14   25
+   37   48   59   70   81    2   13   24   35
+
+>>sum(A,1)
+ans =
+
+   369   369   369   369   369   369   369   369   369
+
+>>sum(A,2)
+ans =
+
+   369
+   369
+   369
+   369
+   369
+   369
+   369
+   369
+   369
+
+>>eye(9)
+ans =
+
+Diagonal Matrix
+
+   1   0   0   0   0   0   0   0   0
+   0   1   0   0   0   0   0   0   0
+   0   0   1   0   0   0   0   0   0
+   0   0   0   1   0   0   0   0   0
+   0   0   0   0   1   0   0   0   0
+   0   0   0   0   0   1   0   0   0
+   0   0   0   0   0   0   1   0   0
+   0   0   0   0   0   0   0   1   0
+   0   0   0   0   0   0   0   0   1
+
+>>A
+A =
+
+   47   58   69   80    1   12   23   34   45
+   57   68   79    9   11   22   33   44   46
+   67   78    8   10   21   32   43   54   56
+   77    7   18   20   31   42   53   55   66
+    6   17   19   30   41   52   63   65   76
+   16   27   29   40   51   62   64   75    5
+   26   28   39   50   61   72   74    4   15
+   36   38   49   60   71   73    3   14   25
+   37   48   59   70   81    2   13   24   35
+
+>>a .* eye(9)
+ans =
+
+   47    0    0    0    0    0    0    0    0
+    0   68    0    0    0    0    0    0    0
+    0    0    8    0    0    0    0    0    0
+    0    0    0   20    0    0    0    0    0
+    0    0    0    0   41    0    0    0    0
+    0    0    0    0    0   62    0    0    0
+    0    0    0    0    0    0   74    0    0
+    0    0    0    0    0    0    0   14    0
+    0    0    0    0    0    0    0    0   35
+
+>>sum(sum(A.*eye(9)))
+ans =  369
+>>sum(sum(A.*flipud(eye(9))))
+ans =  369
+>>eye(9)
+ans =
+
+Diagonal Matrix
+
+   1   0   0   0   0   0   0   0   0
+   0   1   0   0   0   0   0   0   0
+   0   0   1   0   0   0   0   0   0
+   0   0   0   1   0   0   0   0   0
+   0   0   0   0   1   0   0   0   0
+   0   0   0   0   0   1   0   0   0
+   0   0   0   0   0   0   1   0   0
+   0   0   0   0   0   0   0   1   0
+   0   0   0   0   0   0   0   0   1
+
+>>fliud(eye(9))
+error: 'fliud' undefined near line 1 column 1
+>>flipud(eye(9))
+ans =
+
+Permutation Matrix
+
+   0   0   0   0   0   0   0   0   1
+   0   0   0   0   0   0   0   1   0
+   0   0   0   0   0   0   1   0   0
+   0   0   0   0   0   1   0   0   0
+   0   0   0   0   1   0   0   0   0
+   0   0   0   1   0   0   0   0   0
+   0   0   1   0   0   0   0   0   0
+   0   1   0   0   0   0   0   0   0
+   1   0   0   0   0   0   0   0   0
+
+>>
+>>
+>>A = magic(3)
+A =
+
+   8   1   6
+   3   5   7
+   4   9   2
+
+>>pinv(A)
+ans =
+
+   0.147222  -0.144444   0.063889
+  -0.061111   0.022222   0.105556
+  -0.019444   0.188889  -0.102778
+
+>>
+>>temp = pinv(A)
+temp =
+
+   0.147222  -0.144444   0.063889
+  -0.061111   0.022222   0.105556
+  -0.019444   0.188889  -0.102778
+
+>>temp * A
+ans =
+
+   1.0000e+00   2.0817e-16  -3.1641e-15
+  -6.1062e-15   1.0000e+00   6.2450e-15
+   3.0531e-15   4.1633e-17   1.0000e+00
+
 ```
