--- a/notes/coursera/week_02/06_vectorization/01.md
+++ b/notes/coursera/week_02/06_vectorization/01.md
@@ -1,7 +1,13 @@
 # Vectorization
 
-## 1. 
+## 1. Vectorization example
 
-```MATLAB
+* use available linear algebra libraries which are usually highly optimized
 
-```
+![01_vectorization_ex](01_vectorization_ex.png)
+
+![02_vectorization_ex](02_vectorization_ex.png)
+
+![03_vectorization_ex](03_vectorization_ex.png)
+
+![04_vectorization_practice_question](04_vectorization_practice_question.png)
